fix(mfe-transactions): make data grid viewport responsive on small screens

--- a/mfe-transactions/src/app/transactions.component.scss
+++ b/mfe-transactions/src/app/transactions.component.scss
@@ -89,14 +89,6 @@ app-transactions-stats {
     flex-direction: column;
     gap: 0.75rem;
   }
-
-  .datagrid-container {
-    overflow-x: auto;
-  }
-
-  .datagrid-body {
-    height: 25rem;
-  }
 }
 
 @media (max-width: 36em) {
